--- a/notes.html
+++ b/notes.html
@@ -79,46 +79,183 @@
             </div>
             <div class="notesPageRightItem1">
                 <div class="notesRightItem1Contents">
-                    <div class="notesRightItem1Heading">UPCOMING ALBUMS</div><br>
-                    <img src="Assets/upcomingAlbumGrid1.png" class="upcomingAlbumGrid">
-                    <div class="notesRightItem1Body"><br>
-                        <b><i>COWBOY CARTER, </i>Beyoncé • </b><i>RENAISSANCE</i> was one of my most played albums of
-                        2023,
-                        mostly because it typically takes a year or two for an entire album to grow on me. Very rarely
-                        do I enjoy an entire album top to bottom upon the first listen. <i>Lemonade</i> was one of those
-                        rare cases, and there were a couple things that surprised me about that. Up to that point, I'd
-                        written off country music, but "Daddy Lessons" was a standout in the tracklist, and it really
-                        gave me an appreciation for well-written country, because all I'd heard for the last 6 years was
-                        "country" that just sounds like Nickelback with a southern accent. <i>COWBOY CARTER</i> so far
-                        has been solid, and I'm really excited to see where else it'll go.
+                    <div class="notesRightItem1Heading">Bitchfork: <i>Arca, </i>Arca</div><br>
+                    <video autoplay loop muted class="fullImageRight">
+                        <source src="Assets/bitchforkArcaFinal4k.mov" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <br><br>
+                    <div class="explainer"><i>Bitchfork is a monthly review of an album of my choosing. For the first
+                            batch, I wanted to highlight some of my all time favorites, among which is Arca's 2017
+                            magnum opus,</i> Arca. <i>Disclaimer: I have no Spanish skills but we'll talk about that
+                            more later.</i></div>
+                    <div class="notesRightItem1Body">
+                        <br>
+                        <hr>
+                        <br>
+                        I stumbled upon Arca for a number of reasons. I, like many other teenagers, was watching
+                        <i>Euphoria</i> back in 2019 and heard a song in the background of the penultimate episode that
+                        caught my attention, and then completely forgot about it. I later rewatched it, and decided to
+                        look into it, and then discovered that I had been listening to Arca all along because she has
+                        worked extensively for FKA Twigs, and had worked on some other things The song in
+                        <I>Euphoria</i> was called “Reverie” and is my all-time most played song. Now, I listen to a lot
+                        of music (clearly) and generally would consider myself an “album” person in the sense that if I
+                        enjoy a track I’ll give the entire album a listen. I honestly don’t know if that’s common and
+                        I’m just delusional, but I also see how focused everybody seems to be with singles. TikTok seems
+                        to be a huge factor in the music universe, and promoting a song is a lot easier that promoting I
+                        imagine. I digress. What I mean to say in all of this is: I’ve listened to many albums in many
+                        genres and this stands out as one of the most fascinating and beautiful projects I’ve ever had
+                        the pleasure of listening to.
+                        <br>
+                        So let’s go track by track!
                         <br>
                         <br>
-                        <b><i>All Born Screaming, </i>St. Vincent • </b> St. Vincent has honestly never missed, and
-                        this is shaping up to be no exception. "Broken Man" is one of my favorite tracks of the year so
-                        far, and it's only just come out. St. Vincent is particularly good having "eras" as an artist,
-                        and it's not often that you see her level of commitment. Every project is a complete departure
-                        from the last and she's almost unrecognizable between album covers. I was excited to have a
-                        darker
-                        and more agressive tone on the lead single, because it really suits how I (and presumably many
-                        others) feel about life right now. Her previous release <i>Daddy's
-                            Home </i>was a standout album, and showed an even more introspective side, and featured some
-                        of my favorite instrumtals in recent memory. Could not be more excited for this one.
+                        <b>1. PIEL </b>When I first heard this song I was blown away by the emotion and ambience and I
+                        still am now, but what’s changed is what I know about this album. All of her previous albums did
+                        not feature any vocals, or at least not leading vocals. So for an earlier Arca fan, this was
+                        brand-new territory. Using “Piel” to open the album really sets the tone for the rest of the
+                        project. There’s also sort of a sense of dread over the entirety of the track, and it genuinely
+                        makes you want to hear what’s next.
                         <br>
                         <br>
-                        <b><i>brat, </i>Charli XCX • </b>
-                        I won't claim to be a massive Charli XCX fan; I've got a handful of songs that I enjoy, but only
-                        one album that I've really connected with. <i>Crash</i> was really fantastic pop, and I was
-                        really surprised about how much I enjoy it. <i>brat </i> is headed in a very different
-                        direction, based on "Von Dutch" but it's on trend with the Y2K aesthetic obsession. So far it
-                        really feels promising.
+                        <b>2. ANOCHE </b>”Anoche” is where we start to get more of a sense for the vibes of the rest of
+                        the album—it’s hard to describe what the production on the whole project sounds and feels like,
+                        the best I can do is like… cyborg. And I mean that literally, it’s equal parts organic and
+                        industrial. Anoche opens with a distorted piano and gradually is joined by vocals, and then some
+                        more percussion—all of it feels very melancholic and alive.
                         <br>
                         <br>
-                        <b><i>Radical Optimism, </i>Dua Lipa • </b>
-                        Let me be clear! I hate this cover and I hate the name of the album, but I thoroughly enjoy
-                        Dua's recent work, and am excited to hear what this sounds like. Houdini is underrated. She's another fantastic "eras" person and she seems to be cranking out hits, so here's hoping.
+                        <b>3. SAUNTER </b>I’ll be honest that this is not one of my favorites but I do think it serves a
+                        purpose, which is to sort of let the listener breach. I’ll describe this experience as “working
+                        on a stressful steam boat while somebody is playing piano and giving a short vocal performance
+                        at the end. It’s a break from the heavier and more sad tracks that opened.
+                        <br>
+                        <br>
+                        <b>4. URCHIN </b>This is an absolute highlight. This is again, very organic, but also leans into
+                        a more industrial-sounding bass. The piano is great, the drop is great, everything is great. If
+                        I had to ding it on anything, I’d say the runtime is a tiny bit inflated for casual listening.
+                        Sitting down with headphones on, or perhaps in the car is the ideal place for this song.
+                        <br>
+                        <br>
+                        <b>5. REVERIE </b>This is the one. The only way to describe this song accurately is “complex”.
+                        Every time I listen to it I sit and wonder how somebody can even think to create something like
+                        this. The song feels like it’s breathing because it’s just filled with sounds, and swells, and
+                        so many other micro details that it is just jaw dropping. There is truly nothing I would change
+                        about this song, and I wish I could hear it again for the first time. Everything feels like it
+                        has purpose, and there’s little imperfections that… make it feel perfect? No notes.
+                        <br>
+                        <br>
+                        <b>6. CASTRATION </b>This is another instrumentals only one, and it once again is a really nice
+                        break from the heavy stuff. I would say this one leans more into the industrial side on paper,
+                        but in practice, the organic elements shine through, because they feel like they’re getting
+                        closer to you as the song progresses. It’s like a bionic cat aggressively meowing at you as it
+                        approaches.
+                        <br>
+                        <br>
+                        <b>7. SIN RUMBO </b>I was caught off guard when I first heard this because it’s genuinely an
+                        amazing vocal performance. Seriously depressing track. Everything sort of feels like it’s
+                        crying. Arca: crying, strings: crying, drums: crying, synth: crying. Regardless, it’s another
+                        highlight, and I’d honestly go as far as calling it a career highlight. Preceding <I>Arca</i>
+                        was a little EP that I was and still am obsessed with called <i>Entrañas</i> and “Sin Rumbo”
+                        closed it out. The album version is different, as the original features the sounds of many
+                        fireworks going off at the end, but they’re about the same in every other aspect.
+                        <br>
+                        <br>
+                        <b>8. CORAJE </b>Arca is very much a maximalist, but the production here is stripped back a bit,
+                        and it really shows a different and new side of Arca. It’s more intimate—pulling the production
+                        back forces the vocals to take center stage, and once again we are just extremely melancholic. I
+                        couldn’t tell you what this song is about simply because it’s in Spanish, but I can tell you
+                        that it feels like heartbreak and longing.
+                        <br>
+                        <br>
+                        <b>9. WHIP </b>I struggle to understand why this track made it to the album, it’s a black sheep.
+                        But for somebody like me who was just getting into Arca from this album, it’s a little peek at
+                        her more chaotic side. The song itself is literally just the sound of whips, but it’s also kind
+                        of delightfully playful. It’s the song-ification of poking the bear; seeing how ridiculous you
+                        remix the sound of a whip before it becomes annoying. She doesn’t ever wake the bear, but it’s a
+                        close call. I appreciate the song and I don’t think it’s bad, but it’s just such a strange jump
+                        from the previous track, and especially to the next one.
+                        <br>
+                        <br>
+                        <b>9. DESAFÍO </b>This is probably one of the best songs of the 2010s, and I really mean that. I
+                        wouldn’t classify it as my personal absolute favorite, but it’s among the top; that said I think
+                        it’s probably her most well-produced one. The vocals are absolutely ethereal and they’re mixed
+                        flawlessly into a pretty maximal backing track. And that’s precisely why I think it’s so
+                        excellent, every element feels like it was placed with surgical precision, all while still
+                        maintaining the human touch and emotion.
+                        <br>
+                        <br>
+                        <b>10. FUGACES </b>Another vocal showcase, and a really beautiful one at that. I Googled the
+                        lyrics in English because I always thought this song sounded like… healing? And it seems to be
+                        kind of exactly about that. It’s certainly still melancholic, but it feels like you’re getting
+                        all your negative feelings. When you listen to just the strings, they have that same “breathing”
+                        element to them as mentioned before, but they really just keep expanding as new elements are
+                        added.
+                        <br>
+                        <br>
+                        <b>11. MIEL </b>This is another one where I am just baffled as to why it is where it is on the
+                        track list. In fact, I’d go as far as to say this album may have very well been a 10 if this and
+                        “Whip” switched places. Or if “Whip” were removed but that feels too hateful. Regardless, it’s
+                        another extremely sad song that sort of undoes the vague feeling of hope that you get from
+                        “Fugaces”. Or maybe none of this matters because everybody just hits shuffle. Who knows. Either
+                        way, don’t get me wrong, it’s good.
+                        <br>
+                        <br>
+                        <b>11. CHILD </b>What a closer. It’s an increasingly chaotic piano and it just feels like being
+                        happy again. I think placing this at the end is quite literally just the happy ending we
+                        deserve, and of course, Arca deserves. Things seem pretty bad but the extreme playfulness is a
+                        great pick me up.
+                        <br>
+                        <br>
+                        <hr>
+                        <br>
+                        I debated giving this a round 10, but I didn’t because while it has most of the makings of a
+                        perfect album, but not all, as much as I wish it did. I want to assign ratings with some sort of
+                        system instead of just throwing nonsensical values around. So here’s how the rating system
+                        works:
+                        <br>
+                        <br>
+                        <b>ALL RATINGS ARE OUT OF 10.</b> This is a simple and fairly universal number to rate based on.
+                        <br>
+                        <br>
+                        <b>A maximum of 3 points can be achieved based on the production.</b> This covers instruments
+                        and mixing.
+                        <br>
+                        <br>
+                        <b>A maximum of 3 points can be achieved based on the vocal performance and/or emotion conveyed.
+                        </b>When I say “emotion conveyed” I’m referring to songs that have no words, so how well can
+                        they convey a message despite that.
+                        <br>
+                        <br>
+                        <b>A maximum of 3 points can be achieved based on the songwriting. </b>Plenty of songs and have
+                        good production and good singing, but maybe the lyrics are a little stupid. This portion
+                        accounts for that.
+                        <br>
+                        <br>
+                        <b>A maximum of 1 point can be achieved based on track listing. </b>How did the artist want
+                        people to listen to it? Am I seeing the vision? Does the order of the songs make sense? This is
+                        likely where the most .5s are deducted. A zero indicates that the track listing was practically
+                        nonsense, a .5 means it’s acceptable but could use some tweaking, and a 1, of course, is a
+                        perfect layout.
+                        <br>
+                        <br>
+                        <iframe class="AppleMusic" allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="2px" height="450" style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/arca/1203295856"></iframe>
+                        <br>
+                        <br>
+                        <b><I>Arca,</i> Arca - 9.5</b>
+                        <br>
+                        <br>
+                        <b>PRODUCTION - </b> 3/3
+                        <br>
+                        <b>VOCALS/EMOTION - </b> 3/3
+                        <br>
+                        <b>SONGWRITING - </b> 3/3
+                        <br>
+                        <b>TRACKLISTING - </b> .5/1
+                        <br>
                     </div><br>
 
-                    <div class="rightDateStamp"></i>3.23.24</div>
+                    <div class="rightDateStamp"></i>3.26.24</div>
                 </div>
             </div>
             <div class="notesPageRightItem1">
@@ -176,7 +313,7 @@
                     </tr>
                 </table>
                 <div class="leftBody1Sec2">
-                    <a href="https://open.spotify.com/playlist/36Q5IBTsf4Z7FSSxjJlB2c?si=e80c61bcf8424375"
+                    <a href="https://music.apple.com/us/playlist/favorites/pl.u-xlyNYVNseoljdA"
                         class="musicButtonA">
                         <div class="musicButton">
                             PLAY ▶
